[project]
name = "asr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cuda-python>=12.9.0",
    "fastapi[standard]>=0.115.12",
    "gradio>=5.33.1",
    "librosa>=0.11.0",
    "nemo-toolkit[asr]>=2.3.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.3",
]

[dependency-groups]
dev = [
    "ruff>=0.11.13",
]
